Revision history for SPVM
0.9509  2021-03-09
        [CHANGE]
        * Add Fn->is_numeric_array, Fn->is_mulnum_array doc.
        * Add Fn->is_object_array
        * Add is_object_array native API.
        * Native API get_elem_byte_size uses only runtime information
        * Native API has_callback uses only runtime information
        * Native API has_interface uses only runtime information
0.9508  2021-03-04
        [CHANGE]
        * Add "get_constant_string" native API.
        * SPVM::Builder can detect the changed of SPVM::Builder modules and SPVM core header files and source files in all places.
        * Native API's no_symbol_cache_flag, set_no_symbol_cache_flag, get_no_symbol_cache_flag are currently unused.
          By this, the peformance of calling methods is down, however, I plan to fix the performance in the future release.
        * Reduce memory usage  from about 24MB to 9.5MB on 64 bit environment by free memories that is created at compile time.
0.9507  2021-02-24
        [CHANGE]
        * SPVM don't support nmake. Already nmake test always fails until now.
        * Add "index_len" method to the "Fn" module.
        * Add "rindex_len" method to the "Fn" module.
        [BUG FIX]
        * Fix the bug that spvmcc can't detect the changes of the SPVM core header files.
        
0.9506  2021-02-22
        [CHANGE]
        * Add no_symbol_cache_flag, set_no_symbol_cache_flag, get_no_symbol_cache_flag native APIs
        * Precompile and native method of SPVM core become reentrant if no_symbol_cache_flag is set.
        * Fix precompile exception bugs when symbols is not found.
        * Add print, print_stderr native APIs.
        * env is not managed by SPVM memory allocator because env must exist before the compiler is created.
        * Add the following native APIs for the compilation of SPVM
          SPVM_ENV* (*new_env_raw)(SPVM_ENV* env);
          void (*free_env_raw)(SPVM_ENV* env);
          int32_t (*init_env)(SPVM_ENV* env);