@@ -546,9 +546,6 @@ EOS
   // Create env
   SPVM_ENV* env = SPVM_API_new_env_raw(NULL);
   
-  // Set the compiler
-  env->compiler = compiler;
-
   // Set runtime information
   env->runtime_info = runtime_info;
   
